refactor: melhorias aplicada no código